set span in trace context